--- a/sources/style_base.css
+++ b/sources/style_base.css
@@ -16,7 +16,7 @@ body {
     align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(8, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
 .calculator-area > button {
@@ -54,6 +54,21 @@ body {
 
 .calculator-area > button.c:hover {
     background-color: rgb(255, 255, 187)
+}
+
+.calculator-area > .select-container {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 25px;
+}
+
+.calculator-area > .select-container > .color-select {
+    font-size: 1.5em;
+    width: 30%;
+    height: 80%;
+    border: 3px solid rgb(100, 100, 100);
 }
 
 .output-area {
