--- a/sources/style_base.css
+++ b/sources/style_base.css
@@ -114,13 +114,14 @@ body {
     background-color: white;
     display: flex;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-direction: column;
-    padding: 10px;
+    padding: 0.45em;
     word-wrap: break-word;
     word-break: break-all;
     border: 2px solid black;
     font-size: 3em;
+    overflow-y: auto;
 }
 
 .span {
