--- a/sources/style_base.css
+++ b/sources/style_base.css
@@ -53,8 +53,8 @@ body {
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-columns: repeat(8, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+    grid-template-columns: repeat(8, 6em);
+    grid-template-rows: minmax(120px, auto) repeat(6, 6em);
 }
 
 .calculator-area > button {
@@ -99,7 +99,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 25px;
+    padding-top: 1em;
 }
 
 .calculator-area > .select-container > .color-select {
