--- a/sources/style_colorblind.css
+++ b/sources/style_colorblind.css
@@ -54,8 +54,8 @@ body {
     justify-content: center;
     align-content: center;
     min-height: 100vh;
-    grid-template-columns: repeat(8, 100px);
-    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+    grid-template-columns: repeat(8, 6em);
+    grid-template-rows: minmax(120px, auto) repeat(6, 6em);    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
 
 .calculator-area > button {
@@ -101,7 +101,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 25px;
+    padding-top: 1em;
 }
 
 .calculator-area > .select-container > .color-select {
@@ -116,13 +116,14 @@ body {
     background-color: white;
     display: flex;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-direction: column;
-    padding: 10px;
+    padding: 0.45em;
     word-wrap: break-word;
     word-break: break-all;
     border: 2px solid black;
     font-size: 3em;
+    overflow-y: auto;
 }
 
 .span {
