--- a/sources/style_dark.css
+++ b/sources/style_dark.css
@@ -54,7 +54,7 @@ body {
     align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(8, 6em);
-    grid-template-rows: minmax(120px, auto) repeat(6, 6em);    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(6, 6em);
 }
 
 .calculator-area > button {
