--- a/sources/style_dark.css
+++ b/sources/style_dark.css
@@ -8,6 +8,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: rgb(31, 31, 31);
+    font-size: 2vmin;
 }
 
 #calculation-history {
@@ -26,7 +27,7 @@ body {
     padding-left: 0.5em;
     padding-top: 0.3em;
     padding-bottom: 0.2em;
-    font-size: x-large;
+    font-size: 2em;
     border-bottom: 0.1em solid rgb(195, 195, 195)
 }
 
@@ -40,7 +41,7 @@ body {
     width: 100%;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    font-size: large;
+    font-size: 1.2em;
 }
 
 .history-item:hover {
@@ -59,7 +60,7 @@ body {
 
 .calculator-area > button {
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 2em;
     border: 2px solid rgb(166, 166, 166);
     outline: none;
     background-color: rgb(71, 71, 71);
